# pawn-queue

./: .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
docs/: comparison.md
e2e/: config.template.yaml  conftest.py  pytest.ini  test_e2e_compat_probe.py  test_e2e_concurrency.py  test_e2e_dead_letter.py  test_e2e_produce_consume.py  test_e2e_registry.py  test_e2e_topics.py
pawn_queue/: __init__.py  client.py  config.py  consumer.py  core.py  exceptions.py  lease.py  message.py  producer.py  registry.py  topic.py  utils.py
tests/: conftest.py  test_builder.py  test_consumer.py  test_lease.py  test_producer.py  test_registry.py
